# Practice

./: .gitignore  .gitmodules  Test_Codes.pro  main.cpp
Rice/: computerVision.cpp  computerVision.hpp  main.cpp  test.cpp
Rice/src/: CMakeCache.txt  CMakeLists.txt  Makefile  Rice  Rice.cbp  cmake_install.cmake  computerVision.cpp  computerVision.h  main.cpp  test.cpp
fact/: fact.pro  main.cpp
lab1/fact/: fact.pro  main1.cpp
lab2/: main.cpp
lab2/build-timus_1803-Desktop-Debug/: Makefile  timus_1803
lab2/timus_1803/: main.cpp  timus_1803.pro
lab3/: CMakeLists.txt  MyClass.h  myClass.cpp  test.cpp  timus_2095.cpp
timus_2095/TestMyClass/: TestMyClass.vcxproj
timus_2095/TestMyClass/x64/Release/TestMyClass.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestMyClass.lastbuildstate  TestMyClass.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
timus_2095/timus_2095/: MyClass.cpp  MyClass.h  timus_2095.cpp  timus_2095.sln  timus_2095.vcxproj  timus_2095.vcxproj.filters
timus_2095/timus_2095/Debug/: timus_2095.ilk  vc142.idb
timus_2095/timus_2095/Debug/timus_2095.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  timus_2095.lastbuildstate
timus_2095/timus_2095/x64/Release/: TestMyClass.exe.gta.testdurations  timus_2095.iobj  timus_2095.ipdb
timus_2095/timus_2095/x64/Release/timus_2095.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  timus_2095.lastbuildstate  timus_2095.write.1u.tlog
